feat: Add styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
     <title>To-Do</title>
   </head>
   <body>
@@ -26,7 +27,7 @@
               height="24px"
               viewBox="0 -960 960 960"
               width="24px"
-              fill="#1f1f1f"
+              fill="transparent"
             >
               <path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z" />
             </svg>
@@ -40,7 +41,7 @@
               height="24px"
               viewBox="0 -960 960 960"
               width="24px"
-              fill="#1f1f1f"
+              fill="var(--secondary-color)"
             >
               <path
                 d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"
@@ -56,7 +57,7 @@
               height="24px"
               viewBox="0 -960 960 960"
               width="24px"
-              fill="#1f1f1f"
+              fill="transparent"
             >
               <path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z" />
             </svg>
@@ -70,7 +71,7 @@
               height="24px"
               viewBox="0 -960 960 960"
               width="24px"
-              fill="#1f1f1f"
+              fill="var(--secondary-color)"
             >
               <path
                 d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"
