--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
+    <script src="script.js" defer></script>
     <title>To-Do</title>
   </head>
   <body>
@@ -19,7 +20,7 @@
         <button id="add-button">Add</button>
       </form>
       <ul id="todo-list">
-        <li class="todo">
+        <!-- <li class="todo">
           <input type="checkbox" id="todo-1" />
           <label for="todo-1" class="custom-checkbox">
             <svg
@@ -78,7 +79,7 @@
               />
             </svg>
           </button>
-        </li>
+        </li> -->
       </ul>
     </div>
   </body>
